// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiForm is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiForm renders a form element 1`] = `
<form
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--danger euiCallOut euiCallOut--danger euiForm__errors emotion-euiPanel-none-danger-euiCallOut-danger"
    data-size="m"
    role="alert"
    style="--euiCallOutTypeColor: #C61E25;"
    tabindex="-1"
  >
    <div
      class="css-1slkmya-wrapper"
    >
      <div
        class="css-wlziyu-body"
      >
        <span
          class="css-19b7t2f-icon"
          data-euiicon-type="errorFill"
        />
        <div
          class="css-ak2bmi-content"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
          >
            Please address the highlighted errors.
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
</div>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" and has multiple errors 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--danger euiCallOut euiCallOut--danger euiForm__errors emotion-euiPanel-none-danger-euiCallOut-danger"
    data-size="m"
    role="alert"
    style="--euiCallOutTypeColor: #C61E25;"
    tabindex="-1"
  >
    <div
      class="css-1slkmya-wrapper"
    >
      <div
        class="css-wlziyu-body"
      >
        <span
          class="css-19b7t2f-icon"
          data-euiicon-type="errorFill"
        />
        <div
          class="css-ak2bmi-content"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
          >
            Please address the highlighted errors.
          </p>
          <div
            class="euiText euiCallOut__additionalContent emotion-euiText-s-euiTextColor-default"
          >
            <ul>
              <li
                class="euiForm__error"
              >
                <span>
                  This is one error
                </span>
              </li>
              <li
                class="euiForm__error"
              >
                <span>
                  This is another error
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
</div>
`;

exports[`EuiForm renders with error callout when isInvalid is "true" and has one error 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
>
  <div
    aria-live="assertive"
    class="euiPanel euiPanel--danger euiCallOut euiCallOut--danger euiForm__errors emotion-euiPanel-none-danger-euiCallOut-danger"
    data-size="m"
    role="alert"
    style="--euiCallOutTypeColor: #C61E25;"
    tabindex="-1"
  >
    <div
      class="css-1slkmya-wrapper"
    >
      <div
        class="css-wlziyu-body"
      >
        <span
          class="css-19b7t2f-icon"
          data-euiicon-type="errorFill"
        />
        <div
          class="css-ak2bmi-content"
        >
          <p
            class="euiTitle euiCallOutHeader__title emotion-euiTitle-xs-euiCallOutHeader"
          >
            Please address the highlighted errors.
          </p>
          <div
            class="euiText euiCallOut__additionalContent emotion-euiText-s-euiTextColor-default"
          >
            <ul>
              <li
                class="euiForm__error"
              >
                <span>
                  This is one error
                </span>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="euiSpacer euiSpacer--m emotion-euiSpacer-m"
  />
</div>
`;

exports[`EuiForm renders without error callout when invalidCallout is "none" 1`] = `
<div
  aria-label="aria-label"
  class="euiForm testClass1 testClass2 emotion-euiTestCss"
  data-test-subj="test subject string"
/>
`;
